--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@swimlane/ngx-charts": "^14.0.0",
     "animate.css": "^4.1.0",
     "bootstrap": "^4.5.0",
+    "fetch-progress": "^1.3.0",
     "jalali-moment": "^3.3.8",
     "ng-circle-progress": "^1.5.1",
     "ng-recaptcha": "^5.0.0",
@@ -32,6 +33,7 @@
     "tslib": "^1.10.0",
     "video.js": "^7.8.4",
     "videojs-contrib-ads": "^6.7.0",
+    "videojs-ima": "^1.8.1",
     "videojs-nonlin-vast": "^0.1.0",
     "videojs-overlay": "^2.1.4",
     "videojs-vast-vpaid": "^3.0.0-beta.8",
